[package]
name = "lexer"
version = "0.1.0"
authors = ["Liar <yyxxyyzero@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float = { path = "../utils/float/" }

[dependencies.nom]
version = "6"
features = ["regexp"]